Update template with extra css link

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,6 +9,7 @@ title: "hadleyrose: {{ title }}"
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/98.css">
+    <link rel="stylesheet" href="{{ nesting }}/styles/extra.css">
   </head>
   <body class="{{ bodyClass }}">
     <main>
