--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,6 +8,7 @@ title: "hadleyrose: {{ title }}"
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="{{ nesting }}/js/main.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="stylesheet" href="{{ nesting }}/styles/extra.css">
   </head>
