--- a/src/styles/extra.css
+++ b/src/styles/extra.css
@@ -14,6 +14,9 @@ h1 {
     top: 50%;
     text-align: center;
 }
+.window {
+    background: rgba(192, 192, 192, 0.67);
+}
 a {
     color:darkcyan;
     font-weight: bold;
